--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
                         <button class="tablink" onclick="openPage('Role', this, '#800080')" >Роли</button>
 
                         <div id="Profile" class="tabcontent">
-                            <div class="header">
+                            <div class="header-profile">
                                 <button class="button blue-button button-edit">Редактировать</button>
                             </div>
                             <div class="content-profile">
