--- a/profile.html
+++ b/profile.html
@@ -1033,9 +1033,9 @@
                             <div class="role-content">
                                 <section class="list-role1">
                                     <div class="head-table1">
-                                        <div class="item-head img-header">Системное имя</div>
-                                        <div class="item-head FIO-header">Наименование</div>
-                                        <div class="item-head dob-header">Дата начала</div>
+                                        <div class="item-head sysname-header">Системное имя</div>
+                                        <div class="item-head name-role-header">Наименование</div>
+                                        <div class="item-head date-end-header">Дата начала</div>
                                     </div>
                                     <!--h3 class="head-items-role">Доступные роли</h3-->
                                     <div class="items-role2">
@@ -1059,7 +1059,7 @@
                                             </div>
                                             <!--span class="text-item">Бог</span><span class="button-item"></span-->
                                         </div>
-                                        <button class="item-role2"
+                                        <div class="item-role2"
                                             onclick="openMenuPage('detail-admin2','tab-detail2','item-role2', this, '#800080')">
                                             <div class="item-value sysname-role-item-value">
                                                 <span class="text-item">admin</span>
@@ -1080,8 +1080,8 @@
                                             </div>
                                             <!--span class="text-item">Администратор</span><span
                                                 class="button-item"></span-->
-                                        </button>
-                                        <button class="item-role2"
+                                        </div>
+                                        <div class="item-role2"
                                             onclick="openMenuPage('detail-user2','tab-detail2','item-role2', this, '#800080')">
                                             <div class="item-value sysname-role-item-value">
                                                 <span class="text-item">user</span>
@@ -1101,7 +1101,13 @@
                                                 </div>                                                
                                             </div>
                                             <!--span class="text-item">Пользователь</span><span class="button-item"></span-->
-                                        </button>
+                                        </div>
+                                        
+                                    </div>
+                                    <div class="content-numerator1">
+                                        <div class="numer1" id="defaultOpenItemTable1"
+                                            onclick="openMenuPage('page-table-1','page-contant-table','numer1', this, '#973E95')"
+                                            ><span class="number-page">1</span></div>                                        
                                     </div>
                                 </section>
                                 <section class="detail-role">
@@ -1156,7 +1162,7 @@
                                             </div>
                                         </div>
                                         <footer class="footer-profile1">
-                                            <div class="group-button">
+                                            <div class="group-button1">
                                                 <button class="button green-button button-save">Сохранить</button>
                                                 <button class="button blue-button button-cancel">Отмена</button>
                                             </div>
@@ -1212,7 +1218,7 @@
                                             </div>
                                         </div>
                                         <footer class="footer-profile1">
-                                            <div class="group-button">
+                                            <div class="group-button1">
                                                 <button class="button green-button button-save">Сохранить</button>
                                                 <button class="button blue-button button-cancel">Отмена</button>
                                             </div>
@@ -1262,7 +1268,7 @@
                                         </div>
 
                                         <footer class="footer-profile1">
-                                            <div class="group-button">
+                                            <div class="group-button1">
                                                 <button class="button green-button button-save">Сохранить</button>
                                                 <button class="button blue-button button-cancel">Отмена</button>
                                             </div>
